	PR ld/14189 	* elf32-arm.c (elf32_arm_check_relocs): Do not increment refcount 	for locally bound symbols.